fix source of scope of field reference in dotted name